--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -5,6 +5,7 @@
     --white-color: var(--text-secondary);
     --body-font: var(--ff-poppins);
 }
+
 .Sidebar {
     transition: .5s;
     font-family: var(--body-font);
@@ -86,35 +87,43 @@
     font-weight: 500;
     border: none !important;
 }
-.Sidebar .accordion-item .accordion-header .accordion-button{
+
+.Sidebar .accordion-item .accordion-header .accordion-button {
     border: none;
     box-shadow: none;
     background-color: transparent;
     margin: 0;
 }
-.Sidebar .accordion-item .accordion-header .accordion-button:not(.collapsed){
+
+.Sidebar .accordion-item .accordion-header .accordion-button:not(.collapsed) {
     background-color: rgba(77, 77, 77, 0.299);
     border: none;
     box-shadow: none;
     color: var(--white);
     margin: 0;
 }
-.Sidebar .accordion-item{
+
+.Sidebar .accordion-item {
     background-color: transparent;
     border: none;
 }
-.Sidebar .accordion-item .nav-link.accordion-header{
+
+.Sidebar .accordion-item .nav-link.accordion-header {
     padding: 0;
     margin-bottom: 0;
 }
-.Sidebar .accordion-body{
+
+.Sidebar .accordion-body {
     padding: 1rem;
 }
 
 .Sidebar .nav-link:hover,
 .Sidebar .accordion-item .accordion-header .accordion-button:hover {
     color: var(--first-color);
-    background-color: var(--main-purple);
+    /* background-color: var(--main-purple); */
+    background: linear-gradient(278deg, #008B5A 1.97%, #01EBE0 98.03%);
+
+    box-shadow: 0px 2.992px 2.992px 0px rgba(0, 0, 0, 0.25);
 }
 
 .Sidebar .nav-link svg {
@@ -140,7 +149,9 @@
 }
 
 .Sidebar .active {
-    background-color: var(--main-purple);
+    /* background-color: var(--main-purple); */
+    background: linear-gradient(278deg, #008B5A 1.97%, #01EBE0 98.03%);
+    box-shadow: 0px 2.992px 2.992px 0px rgba(0, 0, 0, 0.25);
     color: var(--first-color);
 }
 
@@ -160,6 +171,7 @@
     margin: auto;
     width: fit-content;
 }
+
 .Sidebar.hide .nav-logo {
     width: 4rem;
     transition: .5s;
@@ -171,12 +183,14 @@
         position: absolute;
         z-index: 999;
     }
-    .Sidebar.hide{
+
+    .Sidebar.hide {
         width: 28rem;
         left: -28rem;
         position: absolute;
     }
-    .Sidebar.hide .nav-toggle{
+
+    .Sidebar.hide .nav-toggle {
         right: -28px;
         top: 5px;
         width: 24px;
@@ -184,5 +198,5 @@
         font-size: 2rem;
     }
 
-    
+
 }
