--- a/src/styles/GlobalStyle.css
+++ b/src/styles/GlobalStyle.css
@@ -3,6 +3,20 @@
     margin: 0 auto;
 }
 
+.card2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    flex-shrink: 0;
+    border-radius: 1.40269rem;
+    border: 2px solid #01EBE0;
+    background: rgba(31, 31, 32, 0.30);
+    box-shadow: 0px 2.383px 2.383px 0px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(2.979184150695801px);
+}
+
 .card .card-inner {
     padding-top: 1rem;
     background: linear-gradient(270deg, #000909 6.06%, #000908 55.87%, #0C4132 99.95%);
@@ -33,6 +47,16 @@
     line-height: normal;
 }
 
+.regadiant-btn {
+    font-size: 1rem;
+    display: inline-flex;
+    padding: 0.84163rem 1.08156rem 0.87025rem 1.12213rem;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0.46756rem;
+    background: linear-gradient(278deg, #008B5A 1.97%, #01EBE0 98.03%);
+    box-shadow: 0px 2.992px 2.992px 0px rgba(0, 0, 0, 0.25);
+}
 
 .timg {
     width: 3.3rem;
